--- a/videos/videos.html
+++ b/videos/videos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Videos</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,17 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <body>
+      <div class="container">
+        <div class="row"  style="margin-top: 40px">
+          <div class="col-md-1 diagonal-text text-link"><a href="../main/main.html">Home</a></div>
+          <div class="col-md-1 diagonal-text text-link"><a href="../webdesign/webdesign.html">Design</a></div>
+          <div class="col-md-1 diagonal-text text-link"><a href="../music/music.html">Music</a></div>
+          <div class="col-md-1 diagonal-text text-link"><a href="../art/art.html">Art</a></div>
+          <div class="col-md-1 diagonal-text text-link"><a href="#">Videos</a></div>
+          <div class="col-md-1 diagonal-text text-link"><a href="../contact/contact.html">Contact</a></div>
+        </div>
+      </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
